--- a/painel_professor.html
+++ b/painel_professor.html
@@ -280,6 +280,30 @@
         });
       });
     }
+
+    // Update the student's level
+    function updateStudentLevel(teacherId, classId, studentId, level) {
+      const studentRef = db.ref(`usuarios/${teacherId}/turmas/${classId}/students/${studentId}`);
+      studentRef.update({ nivel_em_curso: level }).then(() => {
+        alert("Student level updated successfully!");
+      }).catch(error => {
+        console.error("Error updating student level:", error);
+      });
+    }
+
+    // Remove a student from a class
+    function removeStudentFromClass(teacherId, classId, studentId) {
+      if (confirm("Are you sure you want to remove this student?")) {
+        const studentRef = db.ref(`usuarios/${teacherId}/turmas/${classId}/students/${studentId}`);
+        studentRef.remove().then(() => {
+          alert("Student removed successfully!");
+          loadStudents(teacherId, classId); // Refresh the student list
+        }).catch(error => {
+          console.error("Error removing student:", error);
+        });
+      }
+    }
+
   </script>
 </body>
 </html>
