--- a/painel_professor.html
+++ b/painel_professor.html
@@ -236,10 +236,13 @@
         if (snapshot.exists()) {
           snapshot.forEach(childSnapshot => {
             const studentId = childSnapshot.key;
-            const studentRef = db.ref(`usuarios/${teacherId}/turmas/${classId}/students/${studentId}`);
+            const studentData = childSnapshot.val();
 
+            // Add the student to the class
+            const studentRef = db.ref(`usuarios/${teacherId}/turmas/${classId}/students/${studentId}`);
             studentRef.set({
-              nivel_em_curso: null,
+              nome: studentData.nome,
+              nivel_em_curso: "level1",  // Default level; can be changed
               atrelado_professor: true
             }).then(() => {
               alert("Student added successfully!");
