--- a/painel_professor.html
+++ b/painel_professor.html
@@ -229,7 +229,10 @@
     function addStudentToClass(teacherId, classId) {
       const emailInput = document.getElementById(`student-email-${classId}`);
       const email = emailInput.value.trim();
-      if (!email) return alert("Please enter a student's email.");
+      if (!email) {
+        alert("Please enter a student's email.");
+        return;
+      }
 
       // Query to find the student by email
       db.ref('usuarios').orderByChild('email').equalTo(email).once('value', snapshot => {
@@ -242,11 +245,14 @@
             const studentRef = db.ref(`usuarios/${teacherId}/turmas/${classId}/students/${studentId}`);
             studentRef.set({
               nome: studentData.nome,
-              nivel_em_curso: "level1",  // Default level; can be changed
+              nivel_em_curso: "level1", // Default level, can be changed
               atrelado_professor: true
             }).then(() => {
               alert("Student added successfully!");
               loadStudents(teacherId, classId); // Refresh the student list
+            }).catch(error => {
+              console.error("Error adding student:", error);
+              alert("Error adding student. Please try again.");
             });
           });
         } else {
