--- a/painel_professor.html
+++ b/painel_professor.html
@@ -88,6 +88,15 @@
     .student-list li {
       margin-bottom: 10px;
     }
+
+    .progress-container {
+      display: none;
+      margin-top: 10px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      background-color: #f9f9f9;
+    }
   </style>
 </head>
 <body>
@@ -283,10 +292,52 @@
               <option value="level3" ${studentData.nivel_em_curso === 'level3' ? 'selected' : ''}>Level 3</option>
               <option value="level4" ${studentData.nivel_em_curso === 'level4' ? 'selected' : ''}>Level 4</option>
             </select>
+            <button onclick="toggleProgress('${teacherId}', '${classId}', '${studentId}')">View Progress</button>
             <button onclick="removeStudentFromClass('${teacherId}', '${classId}', '${studentId}')">Remove</button>
+            <div id="progress-container-${studentId}" class="progress-container"></div>
           `;
           studentList.appendChild(studentItem);
         });
+      });
+    }
+
+    // Toggle and update student's progress
+    function toggleProgress(teacherId, classId, studentId) {
+      const progressContainer = document.getElementById(`progress-container-${studentId}`);
+      progressContainer.style.display = progressContainer.style.display === 'none' ? 'block' : 'none';
+
+      if (progressContainer.style.display === 'block') {
+        // Load progress from the database
+        db.ref(`usuarios/${studentId}/progresso`).once('value', snapshot => {
+          let progressHTML = '<h3>Progress</h3>';
+          snapshot.forEach(levelSnap => {
+            const level = levelSnap.key;
+            progressHTML += `<p><strong>Level ${level}</strong></p>`;
+            levelSnap.forEach(unitSnap => {
+              const unit = unitSnap.key;
+              progressHTML += `<p>Unit ${unit}</p>`;
+              unitSnap.forEach(phaseSnap => {
+                const phase = phaseSnap.key;
+                const completed = phaseSnap.val() ? 'checked' : '';
+                progressHTML += `
+                  <label>Phase ${phase} Complete</label>
+                  <input type="checkbox" ${completed} onchange="updateProgress('${studentId}', '${level}', '${unit}', '${phase}', this.checked)">
+                `;
+              });
+            });
+          });
+          progressContainer.innerHTML = progressHTML;
+        });
+      }
+    }
+
+    // Update student's progress
+    function updateProgress(studentId, level, unit, phase, isComplete) {
+      const progressRef = db.ref(`usuarios/${studentId}/progresso/${level}/${unit}/${phase}`);
+      progressRef.set(isComplete).then(() => {
+        alert("Progress updated successfully!");
+      }).catch(error => {
+        console.error("Error updating progress:", error);
       });
     }
 
