--- a/painel_professor.html
+++ b/painel_professor.html
@@ -322,7 +322,7 @@
             <option value="level3" ${currentLevel === 'level3' ? 'selected' : ''}>Level 3</option>
             <option value="level4" ${currentLevel === 'level4' ? 'selected' : ''}>Level 4</option>
           </select>
-          <button onclick="toggleProgress('${studentId}')">View Progress</button>
+          <button onclick="loadProgress('${studentId}')">View Progress</button>
           <button onclick="removeStudentFromClass('${teacherId}', '${classId}', '${studentId}')">Remove</button>
           <div id="progress-container-${studentId}" class="progress-container"></div>
         `;
@@ -332,7 +332,7 @@
       }
     }
 
-    function toggleProgress(studentId) {
+    function loadProgress(studentId) {
       const progressContainer = document.getElementById(`progress-container-${studentId}`);
       progressContainer.style.display = progressContainer.style.display === 'none' ? 'block' : 'none';
 
