--- a/painel_professor.html
+++ b/painel_professor.html
@@ -105,12 +105,6 @@
       margin-top: 10px;
     }
 
-    .inactive-msg {
-      color: red;
-      font-weight: bold;
-      margin-left: 10px;
-    }
-
     .progress-container {
       display: none;
       margin-top: 10px;
@@ -302,7 +296,7 @@
           studentItem.textContent = student.nome;
 
           studentItem.onclick = () => {
-            toggleStudentDetails(studentItem, teacherId, classId, student.id, student.nivel_em_curso);
+            showStudentDetails(studentItem, teacherId, classId, student.id, student.nivel_em_curso);
           };
 
           studentList.appendChild(studentItem);
@@ -310,7 +304,7 @@
       });
     }
 
-    function toggleStudentDetails(studentItem, teacherId, classId, studentId, currentLevel) {
+    function showStudentDetails(studentItem, teacherId, classId, studentId, currentLevel) {
       let detailsDiv = studentItem.querySelector('.student-details');
       if (!detailsDiv) {
         detailsDiv = document.createElement('div');
@@ -322,17 +316,16 @@
             <option value="level3" ${currentLevel === 'level3' ? 'selected' : ''}>Level 3</option>
             <option value="level4" ${currentLevel === 'level4' ? 'selected' : ''}>Level 4</option>
           </select>
-          <button onclick="loadProgress('${studentId}')">View Progress</button>
+          <button onclick="loadProgress('${studentId}', '${studentItem.id}')">View Progress</button>
           <button onclick="removeStudentFromClass('${teacherId}', '${classId}', '${studentId}')">Remove</button>
           <div id="progress-container-${studentId}" class="progress-container"></div>
         `;
         studentItem.appendChild(detailsDiv);
-      } else {
-        detailsDiv.style.display = detailsDiv.style.display === 'none' ? 'block' : 'none';
-      }
+      } 
+      detailsDiv.style.display = detailsDiv.style.display === 'none' ? 'block' : 'none';
     }
 
-    function loadProgress(studentId) {
+    function loadProgress(studentId, itemId) {
       const progressContainer = document.getElementById(`progress-container-${studentId}`);
       progressContainer.style.display = progressContainer.style.display === 'none' ? 'block' : 'none';
 
