--- a/painel_professor.html
+++ b/painel_professor.html
@@ -5,7 +5,113 @@
   <title>Teacher Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    /* (Styles remain unchanged) */
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-image: url('imagens/fundo.png');
+      background-repeat: repeat;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    h1 {
+      color: #4CAF50;
+      margin-top: 20px;
+      font-size: 2em;
+      padding: 10px;
+    }
+
+    .panel {
+      background-color: #ffffff;
+      padding: 20px;
+      margin: 20px auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
+      text-align: left;
+    }
+
+    .panel h2 {
+      font-size: 1.5em;
+      color: #333;
+      margin-bottom: 15px;
+    }
+
+    label {
+      display: block;
+      margin: 10px 0 5px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    input[type="text"], input[type="tel"], select {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
+
+    button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 12px 20px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1em;
+      transition: background-color 0.3s ease;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    }
+
+    button:hover {
+      background-color: #45A049;
+    }
+
+    .class-container {
+      margin-top: 15px;
+      padding: 15px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .student-list {
+      margin-top: 10px;
+      padding-left: 15px;
+      list-style-type: none;
+    }
+
+    .student-list li {
+      margin-bottom: 10px;
+    }
+
+    .progress-container {
+      display: none;
+      margin-top: 10px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      background-color: #f9f9f9;
+    }
+
+    .inactive {
+      color: grey;
+    }
+
+    .inactive select, .inactive button {
+      pointer-events: none;
+      opacity: 0.5;
+    }
+
+    .inactive-msg {
+      color: red;
+      font-weight: bold;
+      margin-left: 10px;
+    }
   </style>
 </head>
 <body>
@@ -50,14 +156,14 @@
   <script>
     // Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+      apiKey: "API_KEY",
       authDomain: "hannahenglishcourse.firebaseapp.com",
       databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
       projectId: "hannahenglishcourse",
       storageBucket: "hannahenglishcourse.appspot.com",
-      messagingSenderId: "449818788486",
-      appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-      measurementId: "G-07VVJG9LRS"
+      messagingSenderId: "MESSAGING_ID",
+      appId: "APP_ID",
+      measurementId: "MEASUREMENT_ID"
     };
 
     // Initialize Firebase
@@ -212,9 +318,10 @@
 
     function toggleProgress(teacherId, classId, studentId) {
       const progressContainer = document.getElementById(`progress-container-${studentId}`);
-      progressContainer.style.display = progressContainer.style.display === 'none' ? 'block' : 'none';
+      
+      if (progressContainer.style.display === 'none' || progressContainer.style.display === '') {
+        progressContainer.style.display = 'block';
 
-      if (progressContainer.style.display === 'block') {
         db.ref(`usuarios/${studentId}/progresso`).once('value', snapshot => {
           let progressHTML = '<h3>Progress</h3>';
           snapshot.forEach(levelSnap => {
@@ -235,6 +342,9 @@
           });
           progressContainer.innerHTML = progressHTML;
         });
+
+      } else {
+        progressContainer.style.display = 'none';
       }
     }
 
@@ -251,7 +361,6 @@
       if (confirm("Are you sure you want to remove this student?")) {
         const studentRef = db.ref(`usuarios/${teacherId}/turmas/${classId}/students/${studentId}`);
         
-        // Remove the student from this class only
         studentRef.remove().then(() => {
           alert("Student removed from class successfully!");
           loadStudents(teacherId, classId);
