--- a/painel_professor.html
+++ b/painel_professor.html
@@ -156,14 +156,14 @@
   <script>
     // Firebase configuration
     const firebaseConfig = {
-      apiKey: "API_KEY",
+      apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
       authDomain: "hannahenglishcourse.firebaseapp.com",
       databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
       projectId: "hannahenglishcourse",
       storageBucket: "hannahenglishcourse.appspot.com",
-      messagingSenderId: "MESSAGING_ID",
-      appId: "APP_ID",
-      measurementId: "MEASUREMENT_ID"
+      messagingSenderId: "449818788486",
+      appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+      measurementId: "G-07VVJG9LRS"
     };
 
     // Initialize Firebase
