--- a/painel_professor.html
+++ b/painel_professor.html
@@ -87,6 +87,12 @@
 
     .student-list li {
       margin-bottom: 10px;
+      cursor: pointer;
+    }
+
+    .student-actions {
+      display: none;
+      margin-top: 10px;
     }
 
     .progress-container {
@@ -290,21 +296,28 @@
             const studentItem = document.createElement('li');
             studentItem.className = isAttached ? '' : 'inactive';
             studentItem.innerHTML = `
-              <p>${studentData.nome} ${!isAttached ? '<span class="inactive-msg">The student left the class</span>' : ''}</p>
-              <select ${!isAttached ? 'disabled' : ''} onchange="updateStudentLevel('${teacherId}', '${classId}', '${studentId}', this.value)">
-                <option value="level1" ${studentData.nivel_em_curso === 'level1' ? 'selected' : ''}>Level 1</option>
-                <option value="level2" ${studentData.nivel_em_curso === 'level2' ? 'selected' : ''}>Level 2</option>
-                <option value="level3" ${studentData.nivel_em_curso === 'level3' ? 'selected' : ''}>Level 3</option>
-                <option value="level4" ${studentData.nivel_em_curso === 'level4' ? 'selected' : ''}>Level 4</option>
-              </select>
-              <button ${!isAttached ? 'disabled' : ''} onclick="toggleProgress('${teacherId}', '${classId}', '${studentId}')">View Progress</button>
-              <button onclick="removeStudentFromClass('${teacherId}', '${classId}', '${studentId}')">Remove</button>
-              <div id="progress-container-${studentId}" class="progress-container"></div>
+              <p onclick="toggleStudentActions('${studentId}')">${studentData.nome} ${!isAttached ? '<span class="inactive-msg">The student left the class</span>' : ''}</p>
+              <div id="student-actions-${studentId}" class="student-actions">
+                <select ${!isAttached ? 'disabled' : ''} onchange="updateStudentLevel('${teacherId}', '${classId}', '${studentId}', this.value)">
+                  <option value="level1" ${studentData.nivel_em_curso === 'level1' ? 'selected' : ''}>Level 1</option>
+                  <option value="level2" ${studentData.nivel_em_curso === 'level2' ? 'selected' : ''}>Level 2</option>
+                  <option value="level3" ${studentData.nivel_em_curso === 'level3' ? 'selected' : ''}>Level 3</option>
+                  <option value="level4" ${studentData.nivel_em_curso === 'level4' ? 'selected' : ''}>Level 4</option>
+                </select>
+                <button ${!isAttached ? 'disabled' : ''} onclick="toggleProgress('${teacherId}', '${classId}', '${studentId}')">View Progress</button>
+                <button onclick="removeStudentFromClass('${teacherId}', '${classId}', '${studentId}')">Remove</button>
+                <div id="progress-container-${studentId}" class="progress-container"></div>
+              </div>
             `;
             studentList.appendChild(studentItem);
           });
         });
       });
+    }
+
+    function toggleStudentActions(studentId) {
+      const actions = document.getElementById(`student-actions-${studentId}`);
+      actions.style.display = actions.style.display === 'none' || actions.style.display === '' ? 'block' : 'none';
     }
 
     function updateStudentLevel(teacherId, classId, studentId, level) {
