--- a/painel_professor.html
+++ b/painel_professor.html
@@ -233,7 +233,7 @@
           classContainer.classList.add('class-container');
           classContainer.innerHTML = `
             <label>Class Name: <input type="text" value="${classData.nome}" onchange="updateClassName('${teacherId}', '${classId}', this.value)"></label>
-            <p>Number of Students: ${classData.alunos}</p>
+            <p>Max. No. of Students: ${classData.alunos}</p>
             <label for="student-email-${classId}">Add Student by Email</label>
             <input type="text" id="student-email-${classId}" placeholder="Student's email">
             <button onclick="addStudentToClass('${teacherId}', '${classId}')">Enroll Student</button>
